<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/tile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/title"
                android:text="@string/home_title" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />

            <TextView
                style="@style/title.away"
                android:text="@string/away_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/score" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/score" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                style="@style/score.plus"
                android:onClick="addTeamAScore" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

            <Button
                style="@style/score.plus"
                android:onClick="addTeamBScore" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ImageView
            style="@style/image"
            android:contentDescription="@string/num_corners" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                style="@style/plus_bt"
                android:onClick="addTeamACorner" />

            <Button
                android:id="@+id/team_a_corner"
                style="@style/plus_bt.zero" />

            <Button
                android:id="@+id/team_b_corner"
                style="@style/plus_bt.zero" />

            <Button
                style="@style/plus_bt.right"
                android:onClick="addTeamBCorner" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            style="@style/image.2"
            android:contentDescription="@string/num_yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                style="@style/plus_bt"
                android:onClick="addTeamAYellow" />

            <Button
                android:id="@+id/team_a_yellow"
                style="@style/plus_bt.zero" />

            <Button
                android:id="@+id/team_b_yellow"
                style="@style/plus_bt.zero" />

            <Button
                style="@style/plus_bt.right"
                android:onClick="addTeamBYellow" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            style="@style/image.3"
            android:contentDescription="@string/num_red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                style="@style/plus_bt"
                android:onClick="addTeamARed" />

            <Button
                android:id="@+id/team_a_red"
                style="@style/plus_bt.zero" />

            <Button
                android:id="@+id/team_b_red"
                style="@style/plus_bt.zero" />

            <Button
                style="@style/plus_bt.right"
                android:onClick="addTeamBRed" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/reset_btn"
                android:onClick="resetScores"
                android:text="@string/reset"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
